test/errors/array1.input.asm

* = $801

    lda #data[0]  ; unknown variable data
